--- a/analysis.html
+++ b/analysis.html
@@ -1,115 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Product Analysis • Product Analyst Dashboard</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Product Analysis</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand fw-semibold" href="index.html">Product Analyst Dashboard</a>
-    </div>
-  </nav>
 
-  <main class="container my-4">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <div>
-        <a class="btn btn-sm btn-outline-secondary" href="index.html">← Back</a>
-      </div>
-      <h4 class="mb-0" id="productTitle">Product Analysis</h4>
-      <div></div>
-    </div>
+<script>
+if (!localStorage.getItem("token")) {
+  window.location.href = "login.html";
+}
+</script>
 
-    <section class="row g-3" id="kpiCards">
-      <!-- KPI cards injected by analysis.js -->
-    </section>
+<nav class="navbar navbar-dark bg-primary px-3">
+  <a class="navbar-brand" href="index.html">Sales Analysis Dashboard</a>
+  <button class="btn btn-danger btn-sm" onclick="logout()">Logout</button>
+</nav>
 
-    <section class="row g-4 mt-1">
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Sales Share vs Peers</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="peerPieChart" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Seasonwise Sales vs Peers</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="peerBarChart" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-    </section>
+<div class="container my-4">
 
-    <section class="row g-4 mt-1">
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Usage Trends</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="usageTrendsChart" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Funnel Analytics</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="funnelChart" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-    </section>
+  <h2 class="text-center mb-4">Product Analysis</h2>
 
-    <section class="row g-4 mt-1">
-      <div class="col-12">
-        <div class="card shadow-sm">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Segment Usage & Feature Adoption</h5>
-          </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table align-middle" id="segmentsTable">
-                <thead>
-                  <tr>
-                    <th>Customer Segment</th>
-                    <th class="text-end">Users</th>
-                    <th class="text-end">Adoption Rate</th>
-                    <th>Top Features</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <div id="infoBox" class="mb-4"></div>
 
-  </main>
+  <div class="chart-container mb-4">
+    <canvas id="salesTrend"></canvas>
+  </div>
 
-  <footer class="container my-5 text-center text-muted small">
-    Analysis metrics are sample placeholders for a student project.
-  </footer>
+  <div class="chart-container mb-4">
+    <canvas id="revenueTrend"></canvas>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="analysis.js"></script>
+  <div class="chart-container mb-4">
+    <canvas id="profitTrend"></canvas>
+  </div>
+
+</div>
+
+<script src="analysis.js"></script>
+
+<script>
+function logout() {
+  localStorage.removeItem("token");
+  localStorage.removeItem("userId");
+  window.location.href = "login.html";
+}
+</script>
+
 </body>
 </html>
-
-
