--- a/compare.html
+++ b/compare.html
@@ -1,88 +1,97 @@
+<!-- <!DOCTYPE html>
+<html>
+<head>
+  <title>Compare Products</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2 class="mt-3">Product Comparison Dashboard</h2>
+
+  <canvas id="revenueByProduct" height="130"></canvas>
+  <hr>
+
+  <canvas id="revenueByRegion" height="130"></canvas>
+  <hr>
+
+  <canvas id="monthlyRevenue" height="130"></canvas>
+  <hr>
+
+  <h3>Insights</h3>
+  <ul id="insightsList"></ul>
+
+  <button id="exportBtn" class="btn btn-primary">Download Chart</button>
+</div>
+
+<script src="compare.js"></script>
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Compare Products • Product Analyst Dashboard</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Compare Products</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand fw-semibold" href="index.html">Product Analyst Dashboard</a>
-    </div>
-  </nav>
 
-  <main class="container my-4">
-    <section class="mb-3 d-flex justify-content-between align-items-center">
-      <h4 class="mb-0">Category Comparison</h4>
-      <a class="btn btn-sm btn-outline-secondary" href="products.html">Add/Modify Products</a>
-    </section>
+<script>
+if (!localStorage.getItem("token")) {
+  window.location.href = "login.html";
+}
+</script>
 
-    <div id="categoryPills" class="mb-3 d-flex gap-2 flex-wrap"></div>
+<nav class="navbar navbar-dark bg-primary px-3">
+  <a class="navbar-brand" href="index.html">Sales Analysis Dashboard</a>
+  <button class="btn btn-danger btn-sm" onclick="logout()">Logout</button>
+</nav>
 
-    <section class="row g-4">
-      <div class="col-12">
-        <div class="card shadow-sm">
-          <div class="card-header bg-white d-flex justify-content-between align-items-center">
-            <h5 class="mb-0" id="categoryTitle">All Products</h5>
-          </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table align-middle" id="compareTable">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Category</th>
-                    <th class="text-end">Price</th>
-                    <th class="text-end">Sales</th>
-                    <th class="text-end">Gross%</th>
-                    <th class="text-end">Profit%</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+<div class="container my-4">
 
-    <section class="row g-4 mt-1">
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Sales Share (Category)</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="categoryPie" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-xl-6">
-        <div class="card shadow-sm h-100">
-          <div class="card-header bg-white">
-            <h5 class="mb-0">Seasonwise Sales (Category)</h5>
-          </div>
-          <div class="card-body">
-            <canvas id="categoryBar" height="200"></canvas>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+  <h2 class="text-center mb-4">Product Comparison</h2>
 
-  <footer class="container my-5 text-center text-muted small">
-    Compare products within categories and view peer performance.
-  </footer>
+  <div class="chart-container mb-4">
+    <canvas id="revenueByProduct"></canvas>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="compare.js"></script>
+  <div class="chart-container mb-4">
+     <canvas id="unitsSoldPerProduct"></canvas>
+  </div>
+
+
+  <div class="chart-container mb-4">
+    <canvas id="revenueByRegion"></canvas>
+  </div>
+
+  <div class="chart-container mb-4">
+    <canvas id="monthlyRevenue"></canvas>
+  </div>
+
+  <h4>Insights</h4>
+  <ul id="insightsList"></ul>
+
+  <button id="exportBtn" class="btn btn-success mt-3">Download Chart</button>
+</div>
+
+<script src="compare.js"></script>
+
+<script>
+function logout() {
+  localStorage.removeItem("token");
+  localStorage.removeItem("userId");
+  window.location.href = "login.html";
+}
+</script>
+
 </body>
 </html>
-
 
