--- a/products.html
+++ b/products.html
@@ -49,6 +49,48 @@ if (!localStorage.getItem("token")) {
   </form>
 </main>
 
+<!-- Monthly Sales Popup -->
+<div id="monthlyPopup" class="popup-bg" style="display:none;">
+  <div class="popup-box">
+    <h5>Add Monthly Sales</h5>
+
+    <label>Month (YYYY-MM)</label>
+    <input id="m_month" class="form-control mb-2" placeholder="2024-01">
+
+    <label>Monthly Cost Price</label>
+    <input id="m_cost" type="number" class="form-control mb-2">
+
+    <label>Monthly Selling Price</label>
+    <input id="m_sell" type="number" class="form-control mb-2">
+
+    <label>Units Sold</label>
+    <input id="m_units" type="number" class="form-control mb-2">
+
+    <button class="btn btn-success w-100" onclick="saveMonthlySale()">Save</button>
+    <button class="btn btn-secondary w-100 mt-2" onclick="closePopup()">Cancel</button>
+  </div>
+</div>
+
+<style>
+.popup-bg {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-box {
+  background: white;
+  padding: 20px;
+  width: 300px;
+  border-radius: 10px;
+}
+</style>
+
+
 <script>
 // Prevent back button
 history.pushState(null, "", location.href);
