--- a/compare.html
+++ b/compare.html
@@ -1,62 +1,59 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <title>Compare Products</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-
-<div class="container">
-  <h2 class="mt-3">Product Comparison Dashboard</h2>
-
-  <canvas id="revenueByProduct" height="130"></canvas>
-  <hr>
-
-  <canvas id="revenueByRegion" height="130"></canvas>
-  <hr>
-
-  <canvas id="monthlyRevenue" height="130"></canvas>
-  <hr>
-
-  <h3>Insights</h3>
-  <ul id="insightsList"></ul>
-
-  <button id="exportBtn" class="btn btn-primary">Download Chart</button>
-</div>
-
-<script src="compare.js"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Compare Products</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Compare Products • Sales Analysis Dashboard</title>
 
+  <!-- Bootstrap (optional, used by your other pages) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Chart.js -->
+  <!-- Your app CSS (contains .chart-container, canvas sizing etc.) -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Chart.js (must be loaded before compare.js) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Quick in-file safety sizing in case style.css missing */
+    .chart-container {
+      width: 100%;
+      max-width: 1100px;
+      margin: 18px auto;
+      padding: 16px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+      height: 360px;
+    }
+    canvas {
+      width: 100% !important;
+      height: 100% !important;
+      display: block;
+    }
+  </style>
 </head>
 <body>
 
 <script>
-if (!localStorage.getItem("token")) {
-  window.location.href = "login.html";
-}
+  // Redirect to login if not logged in
+  if (!localStorage.getItem("token")) {
+    window.location.replace("login.html");
+  }
 </script>
 
-<nav class="navbar navbar-dark bg-primary px-3">
-  <a class="navbar-brand" href="index.html">Sales Analysis Dashboard</a>
-  <button class="btn btn-danger btn-sm" onclick="logout()">Logout</button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Sales Analysis Dashboard</a>
+
+    <div class="ms-auto d-flex gap-2">
+      <a class="btn btn-light btn-sm" href="index.html">Home</a>
+      <button class="btn btn-danger btn-sm" id="logoutBtn">Logout</button>
+    </div>
+  </div>
 </nav>
 
-<div class="container my-4">
-
+<main class="container my-4">
   <h2 class="text-center mb-4">Product Comparison</h2>
 
   <div class="chart-container mb-4">
@@ -64,9 +61,8 @@ if (!localStorage.getItem("token")) {
   </div>
 
   <div class="chart-container mb-4">
-     <canvas id="unitsSoldPerProduct"></canvas>
+    <canvas id="unitsSoldPerProduct"></canvas>
   </div>
-
 
   <div class="chart-container mb-4">
     <canvas id="revenueByRegion"></canvas>
@@ -77,21 +73,31 @@ if (!localStorage.getItem("token")) {
   </div>
 
   <h4>Insights</h4>
-  <ul id="insightsList"></ul>
+  <ul id="insightsList" class="mb-4"></ul>
 
-  <button id="exportBtn" class="btn btn-success mt-3">Download Chart</button>
-</div>
+  <div class="d-flex gap-2">
+    <button id="exportBtn" class="btn btn-success">Download Chart (Revenue by Product)</button>
+    <button id="refreshBtn" class="btn btn-outline-secondary">Refresh</button>
+  </div>
+</main>
 
+<!-- Your compare.js (expects Chart.js to be loaded) -->
 <script src="compare.js"></script>
 
 <script>
-function logout() {
-  localStorage.removeItem("token");
-  localStorage.removeItem("userId");
-  window.location.href = "login.html";
-}
+  // Logout handler
+  document.getElementById('logoutBtn').addEventListener('click', () => {
+    localStorage.removeItem('token');
+    localStorage.removeItem('userId');
+    window.location.replace('login.html');
+  });
+
+  // Quick manual refresh (re-run compare.js main)
+  document.getElementById('refreshBtn').addEventListener('click', () => {
+    // compare.js runs its main on DOMContentLoaded; to refresh simply reload page
+    location.reload();
+  });
 </script>
 
 </body>
 </html>
-
