--- a/analysis.html
+++ b/analysis.html
@@ -14,7 +14,7 @@
 
 <script>
 if (!localStorage.getItem("token")) {
-  window.location.href = "login.html";
+  window.location.replace("login.html");
 }
 </script>
 
