--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1 class="fw-semibold mb-3">Welcome to the Product Analyst Dashboard</h1>
           <p class="lead text-muted">Designed for companies to analyze their products and services across usage, sales, feedback, funnels, and market context.</p>
           <div class="mt-4">
-            <a href="company.html" class="btn btn-primary btn-lg px-4">Start Now</a>
+            <a href="login.html" class="btn btn-primary btn-lg px-4">Start Now</a>
           </div>
         </div>
       </div>
