--- a/login.html
+++ b/login.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Login</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-light">
 
-<div class="container mt-5">
-  <h3>Login</h3>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
+    <h3 class="text-center mb-3">Login</h3>
 
-  <input id="email" class="form-control mb-2" placeholder="Email">
-  <input id="password" type="password" class="form-control mb-2" placeholder="Password">
+    <form id="loginForm" novalidate>
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" id="loginEmail" class="form-control" required>
+        <small class="text-danger d-none" id="loginEmailError">Email required</small>
+      </div>
 
-  <button class="btn btn-primary w-100" onclick="loginUser()">Login</button>
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="password" id="loginPassword" class="form-control" required>
+        <small class="text-danger d-none" id="loginPasswordError">Password required</small>
+      </div>
 
-  <p class="mt-2">Don't have an account? <a href="register.html">Register</a></p>
+      <button type="submit" class="btn btn-success w-100">
+        Login
+      </button>
+    </form>
+
+    <p class="text-center mt-3">
+      Don’t have an account?
+      <a href="register.html">Register</a>
+    </p>
+  </div>
 </div>
 
 <script src="auth.js"></script>
