--- a/register.html
+++ b/register.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Register</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-light">
 
-<div class="container mt-5">
-  <h3>Register</h3>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
+    <h3 class="text-center mb-3">Create Account</h3>
 
-  <input id="name" class="form-control mb-2" placeholder="Full Name">
-  <input id="email" class="form-control mb-2" placeholder="Email">
-  <input id="password" type="password" class="form-control mb-2" placeholder="Password">
+    <form id="registerForm" novalidate>
+      <div class="mb-3">
+        <label class="form-label">Full Name</label>
+        <input type="text" id="name" class="form-control" required>
+        <small class="text-danger d-none" id="nameError">Name is required</small>
+      </div>
 
-  <button class="btn btn-success w-100" onclick="registerUser()">Register</button>
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" required>
+        <small class="text-danger d-none" id="emailError">Invalid email</small>
+      </div>
 
-  <p class="mt-2">Already have an account? <a href="login.html">Login</a></p>
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="password" id="password" class="form-control" required>
+        <small class="text-danger d-none" id="passwordError">
+          Password must be at least 6 characters
+        </small>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">
+        Register
+      </button>
+    </form>
+
+    <p class="text-center mt-3">
+      Already have an account?
+      <a href="login.html">Login</a>
+    </p>
+  </div>
 </div>
 
 <script src="auth.js"></script>
