--- a/index.html
+++ b/index.html
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic meta tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Page title -->
   <title>Product Analysis Dashboard</title>
+
+  <!-- Google Font for better UI -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" 
+    rel="stylesheet" 
+  />
+
+  <!-- Bootstrap CSS for responsive layout and styling -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+  />
+
+  <!-- Custom CSS file -->
   <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="Minimal, responsive Product Analyst Dashboard with charts and tables." />
+
+  <!-- Page description -->
+  <meta 
+    name="description" 
+    content="Minimal and responsive Product Analyst Dashboard" 
+  />
 </head>
+
 <body>
+
+  <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand fw-semibold" href="#">Product Analyst Dashboard</a>
+      <a class="navbar-brand fw-semibold" href="#">
+        Product Analyst Dashboard
+      </a>
     </div>
   </nav>
 
+  <!-- Main content section -->
   <main class="container my-5">
+
+    <!-- Hero section -->
     <section class="py-5">
       <div class="row justify-content-center">
+
+        <!-- Center content -->
         <div class="col-12 col-lg-8 text-center">
-          <h1 class="fw-semibold mb-3">Welcome to the Product Analyst Dashboard</h1>
-          <p class="lead text-muted">Designed for companies to analyze their products and services across usage, sales, feedback, funnels, and market context.</p>
+
+          <!-- Page heading -->
+          <h1 class="fw-semibold mb-3">
+            Welcome to the Product Analyst Dashboard
+          </h1>
+
+          <!-- Description text -->
+          <p class="lead text-muted">
+            This is a web-based sales analysis platform that helps companies
+            to track, visualize and compare product performance over time.
+            <br><br>
+            The dashboard allows users to manage product data securely,
+            record monthly sales, and analyze revenue, units sold and
+            region-wise performance using charts and graphs.
+          </p>
+
+          <!-- Start button -->
           <div class="mt-4">
-            <a href="login.html" class="btn btn-primary btn-lg px-4">Start Now</a>
+            <a href="login.html" class="btn btn-primary btn-lg px-4">
+              Start Now
+            </a>
           </div>
+
         </div>
       </div>
     </section>
+
   </main>
 
+  <!-- Footer -->
   <footer class="container my-5 text-center text-muted small">
-  
+    <!-- Footer text can be added here -->
   </footer>
+
 </body>
- </html>
-
-
+</html>
