--- a/company.html
+++ b/company.html
@@ -1,68 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic meta tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Page title -->
   <title>Company Type • Product Analyst Dashboard</title>
+
+  <!-- Google Font (Inter) for better UI -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" 
+    rel="stylesheet" 
+  />
+
+  <!-- Bootstrap CSS for layout and styling -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+  />
+
+  <!-- Custom CSS file -->
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+
+  <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand fw-semibold" href="index.html">Product Analyst Dashboard</a>
+      <a class="navbar-brand fw-semibold" href="index.html">
+        Product Analyst Dashboard
+      </a>
     </div>
   </nav>
 
+  <!-- Main content area -->
   <main class="container my-4">
+
+    <!-- Page heading and home button -->
     <section class="mb-3 d-flex justify-content-between align-items-center">
       <h4 class="mb-0">Tell us about your company</h4>
-      <a class="btn btn-sm btn-outline-secondary" href="index.html">Home</a>
+      <a class="btn btn-sm btn-outline-secondary" href="index.html">
+        Home
+      </a>
     </section>
 
+    <!-- Form section -->
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
+
+        <!-- Card for company details -->
         <div class="card shadow-sm">
           <div class="card-body">
+
+            <!-- Company type selection -->
             <div class="mb-3">
               <label class="form-label">Company Type</label>
+
+              <!-- Radio buttons to select company type -->
               <div class="d-flex gap-3 flex-wrap">
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="companyType" id="typeProduct" value="product" checked>
-                  <label class="form-check-label" for="typeProduct">Product-based</label>
+                  <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="companyType" 
+                    id="typeProduct" 
+                    value="product" 
+                    checked
+                  >
+                  <label class="form-check-label" for="typeProduct">
+                    Product-based
+                  </label>
                 </div>
+
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="companyType" id="typeService" value="service">
-                  <label class="form-check-label" for="typeService">Service-based</label>
+                  <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="companyType" 
+                    id="typeService" 
+                    value="service"
+                  >
+                  <label class="form-check-label" for="typeService">
+                    Service-based
+                  </label>
                 </div>
+
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="companyType" id="typeBoth" value="both">
-                  <label class="form-check-label" for="typeBoth">Both</label>
+                  <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    name="companyType" 
+                    id="typeBoth" 
+                    value="both"
+                  >
+                  <label class="form-check-label" for="typeBoth">
+                    Both
+                  </label>
                 </div>
               </div>
             </div>
+
+            <!-- Primary focus input -->
             <div class="mb-3">
               <label class="form-label">Primary Focus</label>
-              <input id="primaryFocus" class="form-control" placeholder="e.g., Analytics tools, Retail platform" />
+              <input 
+                id="primaryFocus" 
+                class="form-control" 
+                placeholder="e.g., Analytics tools, Retail platform" 
+              />
             </div>
+
+            <!-- Continue button -->
             <div class="d-flex justify-content-end">
-              <button id="continueBtn" class="btn btn-primary">Continue</button>
+              <button id="continueBtn" class="btn btn-primary">
+                Continue
+              </button>
             </div>
+
           </div>
         </div>
       </div>
     </div>
   </main>
 
+  <!-- Footer message -->
   <footer class="container my-5 text-center text-muted small">
     Your selections are used to tailor the intake and comparisons.
   </footer>
 
+  <!-- JavaScript file to handle company type logic -->
   <script src="company.js"></script>
+
 </body>
 </html>
-
-
