--- a/login.html
+++ b/login.html
@@ -1,43 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic meta information -->
   <meta charset="UTF-8">
   <title>Login</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS for styling and layout -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet"
+  >
+
+  <!-- Custom CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-light">
 
-<div class="container d-flex justify-content-center align-items-center vh-100">
-  <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
-    <h3 class="text-center mb-3">Login</h3>
+  <!-- Centered login form -->
+  <div class="container d-flex justify-content-center align-items-center vh-100">
 
-    <form id="loginForm" novalidate>
-      <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input type="email" id="loginEmail" class="form-control" required>
-        <small class="text-danger d-none" id="loginEmailError">Email required</small>
-      </div>
+    <!-- Login card -->
+    <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
 
-      <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input type="password" id="loginPassword" class="form-control" required>
-        <small class="text-danger d-none" id="loginPasswordError">Password required</small>
-      </div>
+      <!-- Page heading -->
+      <h3 class="text-center mb-3">Login</h3>
 
-      <button type="submit" class="btn btn-success w-100">
-        Login
-      </button>
-    </form>
+      <!-- Login form -->
+      <form id="loginForm" novalidate>
 
-    <p class="text-center mt-3">
-      Don’t have an account?
-      <a href="register.html">Register</a>
-    </p>
+        <!-- Email input -->
+        <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input 
+            type="email" 
+            id="loginEmail" 
+            class="form-control" 
+            required
+          >
+          <!-- Error message -->
+          <small class="text-danger d-none" id="loginEmailError">
+            Email required
+          </small>
+        </div>
+
+        <!-- Password input -->
+        <div class="mb-3">
+          <label class="form-label">Password</label>
+          <input 
+            type="password" 
+            id="loginPassword" 
+            class="form-control" 
+            required
+          >
+          <!-- Error message -->
+          <small class="text-danger d-none" id="loginPasswordError">
+            Password required
+          </small>
+        </div>
+
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-success w-100">
+          Login
+        </button>
+      </form>
+
+      <!-- Register link -->
+      <p class="text-center mt-3">
+        Don’t have an account?
+        <a href="register.html">Register</a>
+      </p>
+
+    </div>
   </div>
-</div>
 
-<script src="auth.js"></script>
+  <!-- Authentication script -->
+  <script src="auth.js"></script>
+
 </body>
 </html>
