--- a/products.html
+++ b/products.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic meta tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Page title -->
   <title>Products • Sales Analysis Dashboard</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Bootstrap CSS for layout and responsive design -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+  />
+
+  <!-- Custom CSS file -->
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
+<!-- 
+  Authentication check:
+  If user is not logged in (token not found),
+  redirect to login page
+-->
 <script>
-// Block access if not logged in
-if (!localStorage.getItem("token")) {
-  window.location.replace("login.html");
-}
+  if (!localStorage.getItem("token")) {
+    window.location.replace("login.html");
+  }
 </script>
 
+<!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container d-flex justify-content-between align-items-center">
 
-    <a class="navbar-brand fw-semibold" href="index.html">Sales Analysis Dashboard</a>
+    <!-- Dashboard title -->
+    <a class="navbar-brand fw-semibold" href="index.html">
+      Sales Analysis Dashboard
+    </a>
 
+    <!-- Home and Logout buttons -->
     <div class="d-flex gap-2">
       <a class="btn btn-light btn-sm" href="index.html">Home</a>
       <button class="btn btn-danger btn-sm" onclick="logout()">Logout</button>
@@ -30,85 +49,146 @@ if (!localStorage.getItem("token")) {
   </div>
 </nav>
 
+<!-- Main content -->
 <main class="container my-4">
+
+  <!-- Page heading -->
   <section class="mb-3 d-flex justify-content-between align-items-center">
     <h4 class="mb-0">Add Products for Analysis</h4>
-    <!-- <a class="btn btn-sm btn-outline-secondary" href="index.html">Home</a> -->
   </section>
 
+  <!-- Info and Add Product button -->
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <div class="text-muted">Add multiple products. They will be compared during analysis.</div>
-    <button id="addProductBtn" class="btn btn-outline-primary btn-sm" type="button">+ Add Product</button>
+    <div class="text-muted">
+      Add multiple products. They will be compared during analysis.
+    </div>
+    <button 
+      id="addProductBtn" 
+      class="btn btn-outline-primary btn-sm" 
+      type="button">
+      + Add Product
+    </button>
   </div>
 
+  <!-- Product form -->
   <form id="productForm" class="row g-3">
+
+    <!-- Container where product input cards are added dynamically -->
     <div id="productsContainer" class="col-12"></div>
+
+    <!-- Submit button -->
     <div class="col-12">
-      <button class="btn btn-primary btn-lg" type="submit">Analyze All Products</button>
+      <button class="btn btn-primary btn-lg" type="submit">
+        Analyze All Products
+      </button>
     </div>
   </form>
 </main>
 
-<!-- Monthly Sales Popup -->
+<!-- =====================================================
+     MONTHLY SALES POPUP
+     ===================================================== -->
 <div id="monthlyPopup" class="popup-bg" style="display:none;">
+
   <div class="popup-box">
+
     <h5>Add Monthly Sales</h5>
 
+    <!-- Month input -->
     <label>Month (YYYY-MM)</label>
-    <input id="m_month" class="form-control mb-2" placeholder="2024-01">
+    <input 
+      id="m_month" 
+      class="form-control mb-2" 
+      placeholder="2024-01"
+    >
 
+    <!-- Monthly cost price -->
     <label>Monthly Cost Price</label>
-    <input id="m_cost" type="number" class="form-control mb-2">
+    <input 
+      id="m_cost" 
+      type="number" 
+      class="form-control mb-2"
+    >
 
+    <!-- Monthly selling price -->
     <label>Monthly Selling Price</label>
-    <input id="m_sell" type="number" class="form-control mb-2">
+    <input 
+      id="m_sell" 
+      type="number" 
+      class="form-control mb-2"
+    >
 
+    <!-- Units sold -->
     <label>Units Sold</label>
-    <input id="m_units" type="number" class="form-control mb-2">
+    <input 
+      id="m_units" 
+      type="number" 
+      class="form-control mb-2"
+    >
 
-    <button class="btn btn-success w-100" onclick="saveMonthlySale()">Save</button>
-    <button class="btn btn-secondary w-100 mt-2" onclick="closePopup()">Cancel</button>
+    <!-- Popup buttons -->
+    <button 
+      class="btn btn-success w-100" 
+      onclick="saveMonthlySale()">
+      Save
+    </button>
+
+    <button 
+      class="btn btn-secondary w-100 mt-2" 
+      onclick="closePopup()">
+      Cancel
+    </button>
   </div>
 </div>
 
+<!-- Popup styling -->
 <style>
-.popup-bg {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  /* Background overlay for popup */
+  .popup-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-.popup-box {
-  background: white;
-  padding: 20px;
-  width: 300px;
-  border-radius: 10px;
-}
+  /* Popup box */
+  .popup-box {
+    background: white;
+    padding: 20px;
+    width: 300px;
+    border-radius: 10px;
+  }
 </style>
 
-
+<!-- 
+  Prevent browser back button after login
+-->
 <script>
-// Prevent back button
-history.pushState(null, "", location.href);
-window.onpopstate = function () {
-  history.go(1);
-};
+  history.pushState(null, "", location.href);
+  window.onpopstate = function () {
+    history.go(1);
+  };
 </script>
 
+<!-- Products page logic -->
 <script src="products.js"></script>
 
-<!-- ✅ LOGOUT FUNCTION MUST BE AFTER products.js -->
+<!-- 
+  Logout function:
+  Clears login data and redirects to login page
+-->
 <script>
-function logout() {
-  localStorage.removeItem("token");
-  localStorage.removeItem("userId");
-  alert("Logged out");
-  window.location.replace("login.html");
-}
+  function logout() {
+    localStorage.removeItem("token");
+    localStorage.removeItem("userId");
+    alert("Logged out");
+    window.location.replace("login.html");
+  }
 </script>
 
 </body>
