--- a/register.html
+++ b/register.html
@@ -1,51 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic meta information -->
   <meta charset="UTF-8">
   <title>Register</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS for layout and styling -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet"
+  >
+
+  <!-- Custom CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-light">
 
-<div class="container d-flex justify-content-center align-items-center vh-100">
-  <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
-    <h3 class="text-center mb-3">Create Account</h3>
+  <!-- Centered registration form -->
+  <div class="container d-flex justify-content-center align-items-center vh-100">
 
-    <form id="registerForm" novalidate>
-      <div class="mb-3">
-        <label class="form-label">Full Name</label>
-        <input type="text" id="name" class="form-control" required>
-        <small class="text-danger d-none" id="nameError">Name is required</small>
-      </div>
+    <!-- Register card -->
+    <div class="card shadow p-4" style="max-width: 420px; width: 100%;">
 
-      <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input type="email" id="email" class="form-control" required>
-        <small class="text-danger d-none" id="emailError">Invalid email</small>
-      </div>
+      <!-- Page heading -->
+      <h3 class="text-center mb-3">Create Account</h3>
 
-      <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input type="password" id="password" class="form-control" required>
-        <small class="text-danger d-none" id="passwordError">
-          Password must be at least 6 characters
-        </small>
-      </div>
+      <!-- Registration form -->
+      <form id="registerForm" novalidate>
 
-      <button type="submit" class="btn btn-primary w-100">
-        Register
-      </button>
-    </form>
+        <!-- Full name input -->
+        <div class="mb-3">
+          <label class="form-label">Full Name</label>
+          <input 
+            type="text" 
+            id="name" 
+            class="form-control" 
+            required
+          >
+          <!-- Error message -->
+          <small class="text-danger d-none" id="nameError">
+            Name is required
+          </small>
+        </div>
 
-    <p class="text-center mt-3">
-      Already have an account?
-      <a href="login.html">Login</a>
-    </p>
+        <!-- Email input -->
+        <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input 
+            type="email" 
+            id="email" 
+            class="form-control" 
+            required
+          >
+          <!-- Error message -->
+          <small class="text-danger d-none" id="emailError">
+            Invalid email
+          </small>
+        </div>
+
+        <!-- Password input -->
+        <div class="mb-3">
+          <label class="form-label">Password</label>
+          <input 
+            type="password" 
+            id="password" 
+            class="form-control" 
+            required
+          >
+          <!-- Error message -->
+          <small class="text-danger d-none" id="passwordError">
+            Password must be at least 6 characters
+          </small>
+        </div>
+
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-primary w-100">
+          Register
+        </button>
+      </form>
+
+      <!-- Login link -->
+      <p class="text-center mt-3">
+        Already have an account?
+        <a href="login.html">Login</a>
+      </p>
+
+    </div>
   </div>
-</div>
 
-<script src="auth.js"></script>
+  <!-- Authentication JavaScript -->
+  <script src="auth.js"></script>
+
 </body>
 </html>
